fixed navbar spacing, inline links, started button, centered form button

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,14 @@ h1 {
   font-weight: bold;
 }
 
+.nav {
+  padding: 5px;
+  text-decoration: none !important;
+  color: #FFFFFF !important;
+  font-family: Inter, sans-serif;
+  padding: 0 20px 0 10px;
+}
+
 .hero-image {
   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./assets/sergey-zolkin-_UeY8aTI6d0-unsplash.jpg);
   /* height: 100%; */
@@ -32,6 +40,8 @@ h1 {
   position: absolute;
   top: 50%;
   left: 50%;
+  font-size: xx-large;
+  font-weight: bold;
   /* transform: translate(-50%, -50%); */
   /* background-color: orange; */
   /* color: white; */
@@ -42,6 +52,11 @@ h1 {
 .hero-btn:hover {
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, .5);
   --translate-y: -2px;
+}
+
+.form-btn {
+  justify-content: center !important;
+  margin-left: 45%;
 }
 
 @font-face {
